# 89crypt

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: static.yml
ENcrypt/: _ENcrpyt.py  __init__.py
docs/: requirements.txt
docs/source/: algorithm.rst
src/encryptlib/: __init__.py
tests/: tests.py
